--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 MONGO_URL="mongodb://localhost:27017"
 DB_NAME="test_database"
 CORS_ORIGINS="*"
-EMERGENT_LLM_KEY="sk-emergent-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+EMERGENT_LLM_KEY="Open ai api key-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
